name:               website433
version:            0.1.0.0
build-type:         Simple
cabal-version:      >= 1.10

library
  exposed-modules:
      PandocToc
  hs-source-dirs:
      src
  build-depends:
      base
    , pandoc
    , text
                    
executable site
  main-is:          site.hs
  build-depends:    base == 4.*
                  , hakyll == 4.15.*
                  , website433
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N
  default-language: Haskell2010
