cabal-version:       >=1.10
name:                cmsc488-GADTs
version:             0.1.0.0
synopsis:            GADT examples
license:             OtherLicense
license-file:        LICENSE
maintainer:          leonidas@umd.edu
build-type:          Simple
extra-source-files:  CHANGELOG.md

library
  exposed-modules:     GADTs
                     , RedBlackGADT0
  build-depends:       base >= 4.14
                     , HUnit >= 1.6
                     , QuickCheck >= 2.14
  default-language:    Haskell2010
  default-extensions:  GADTs
                     , ScopedTypeVariables
                     , DataKinds
                     , NoStarIsType
  ghc-options:       -Wincomplete-patterns -Wno-orphans -Wno-unticked-promoted-constructors
