cabal-version:       >=1.10
name:                bibtex
version:             0.1.0.0
license-file:        LICENSE
maintainer:          leonidas@umd.edu
build-type:          Simple
extra-source-files:  CHANGELOG.md

executable Bibtex
  main-is:             Bibtex.hs
  build-depends:       base >= 4.14
                     , megaparsec
                     , lens
                     , pretty
  default-language:    Haskell2010
  ghc-options:         -Wincomplete-patterns -main-is Bibtex
  default-extensions:  ScopedTypeVariables
                     , TypeApplications
                     , InstanceSigs
                     , KindSignatures
                     , LambdaCase
                     , DeriveFunctor
                     , DeriveFoldable
                     , DeriveTraversable
                     , GeneralizedNewtypeDeriving
                     , TupleSections
                     , MultiParamTypeClasses
                     , FlexibleInstances
                     , FlexibleContexts
                     , UndecidableInstances
                     , NoMonomorphismRestriction
                     , NoStarIsType
