cabal-version:       >=1.10
name:                cmsc488-transformers
version:             0.1.0.0
-- synopsis:
-- description:
license-file:        LICENSE
maintainer:          leonidas
build-type:          Simple
extra-source-files:  CHANGELOG.md

library
  exposed-modules:     Transformers
                     , LSyntax
                     , TransExercise
                     , State
                     , MtlExample
  build-depends:       HUnit >= 1.6
                     , QuickCheck >= 2.14
                     , base >= 4.14
                     , containers >= 0.6
                     , mtl >= 2.2
                     , pretty >= 1.1
  default-language:    Haskell2010
  ghc-options:        -Wno-missing-signatures -Wtype-defaults -Wincomplete-patterns
  default-extensions:  ScopedTypeVariables
                     , TypeApplications
                     , InstanceSigs
                     , KindSignatures
                     , LambdaCase
                     , DeriveFunctor
                     , DeriveFoldable
                     , DeriveTraversable
                     , GeneralizedNewtypeDeriving
                     , TupleSections
                     , MultiParamTypeClasses
                     , FlexibleInstances
                     , FlexibleContexts
                     , UndecidableInstances
                     , NoMonomorphismRestriction
                     , NoStarIsType
